--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ regex = "1.5.4"
 clap = { version = "4.2.5", features = ["cargo", "derive"] }
 iai = { version = "0.1.1", features = ["iai_macro", "macro"] }
 counter = "0.6.0"
+nom = "7.1.3"
 
 [[bench]]
 name = "day00"
